--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'com.h2database:h2'
+    compile 'org.projectlombok:lombok:1.16.14'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
