--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'com.h2database:h2'
     compile 'org.projectlombok:lombok:1.16.14'
+    compile 'org.springframework:springloaded:1.2.6.RELEASE'
+
 
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
